--- a/src/_includes/base-recept.njk
+++ b/src/_includes/base-recept.njk
@@ -6,9 +6,10 @@
   </head>
 
   <body>
-    <p id="terug"><a href="javascript:history.back()">Terug</a></p>
     <header>
+      <p id="terug"><a href="javascript:history.back()">Terug</a></p>
       {% include 'header.njk' %}
+      <p id="nieuw"><a href="../../admin">Nieuw recept</a></p>
     </header>
     <main>
       {{ content | safe }}
