--- a/src/style.css
+++ b/src/style.css
@@ -41,10 +41,9 @@ h4{
 }
 
 header{
-  display: grid;
+	display: grid;
 	border-bottom: solid 3px black;
 	margin: 20px 0 40px 0;
-  display: inline-block;
 }
 
 #terug{
@@ -55,9 +54,8 @@ h1{
 }
 #nieuw{
   grid-column: 3/4;
+  text-align: right;
 }
-
-
 
 a, a:visited{
 	text-decoration: none;
