--- a/src/_includes/base-recept.njk
+++ b/src/_includes/base-recept.njk
@@ -9,7 +9,7 @@
     <header>
       <p id="terug"><a href="javascript:history.back()">Terug</a></p>
       {% include 'header.njk' %}
-      <p id="nieuw"><a href="../../admin">Nieuw recept</a></p>
+      <p id="nieuw"><a href="../../admin" target="_blank">Nieuw recept</a></p>
     </header>
     <main>
       {{ content | safe }}
