--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -7,9 +7,8 @@
 
   <body>
     <header>
-      <p id="terug"><a href="/">Startpagina</a></p>
       {% include 'header.njk' %}
-      <p id="nieuw"><a href="/admin">Nieuw recept</a></p>
+      <p id="nieuw"><a href="/admin" target="_blank">Nieuw recept</a></p>
     </header>
     {{ content | safe }}
     {#<footer>
