--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,2 +1,2 @@
-<p>&#60; <a href="">Vorig recept</a></p>
-<p><a href="">Volgend recept</a> &#62;</p>
+<p id="vorige">&#60; <a href="">Vorig recept</a></p>
+<p id="volgende"><a href="">Volgend recept</a> &#62;</p>
