--- a/src/_includes/base-filter.njk
+++ b/src/_includes/base-filter.njk
@@ -9,7 +9,7 @@
     <header>
       <p id="terug"><a href="/">Startpagina</a></p>
       {% include 'header.njk' %}
-      <p id="nieuw"><a href="/admin">Nieuw recept</a></p>
+      <p id="nieuw"><a href="/admin" target="_blank">Nieuw recept</a></p>
     </header>
       {% include 'filter.njk' %}
       {{ content | safe }}
