--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-body{
+body, footer{
   width: 75%;
   margin: 0 auto;
 	font-family: 'Raleway', sans-serif;
@@ -79,7 +79,6 @@ main{
   line-height: 22px;
   display: grid;
   grid-template-columns: 3fr 5fr 4fr;
-  height: 10vh;
   width: 100%;
   grid-gap: 12px;
 }
@@ -236,19 +235,22 @@ img{
 
 
 
-/*volgende vorige*/
+
 footer{
-	width: 75%;
-	position: fixed;
-	bottom: 20px;
+  display: grid;
+  position: fixed;
+  bottom: 20px;
 }
-footer p{
-	width: 50%;
-	float: left;
+footer #volgende{
+	grid-column: 1/2;
+  grid-row: 1;
 }
-footer p:nth-child(2){
-	text-align: right;
+footer #vorige{
+	grid-column: 2/3;
+  grid-row: 1;
+  text-align: right;
 }
+
 
 
 
@@ -274,10 +276,10 @@ body {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
 }
-@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+/* @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
 
   body{
     width: 95%;
   }
 
-}
+} */
