--- a/src/style.css
+++ b/src/style.css
@@ -48,12 +48,15 @@ header{
 
 #terug{
   grid-column: 1/2;
+  grid-row: 1;
 }
 h1{
-  grid-column: 2/3;
+  grid-column: 1/3;
+  grid-row: 2;
 }
 #nieuw{
-  grid-column: 3/4;
+  grid-column: 2/3;
+  grid-row: 1;
   text-align: right;
 }
 
