--- a/src/_includes/filter.njk
+++ b/src/_includes/filter.njk
@@ -1,7 +1,7 @@
 <div id="zoeken">
   <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Zoek een gerecht...">
   <div id="myBtnContainer">
-    <a href="/blog"><button class="btn">Volledige inhoudstafel</button></a>
+    <a href="/blog"><button class="btn">Alle recepten</button></a>
     <a href="/veggie"><button class="btn">Veggie</button></a>
     <a href="/vegan"><button class="btn">Vegan</button></a>
     <a href="/vis"><button class="btn">Vis</button></a>
