--- a/src/style.css
+++ b/src/style.css
@@ -163,13 +163,14 @@ img{
 
 
 /* inhoudstafel pagina */
+#inhoudstafel{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
 #inhoudstafel li{
-	width: 50%;
-	float: left;
 	height: 50px;
 	text-align: center;
 }
-
 
 
 
