--- a/src/style.css
+++ b/src/style.css
@@ -275,6 +275,9 @@ body {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
 }
+
+
+
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
 
   body, footer{
@@ -289,6 +292,89 @@ body {
     width: 95%;
     background-color: pink;
   }
+  #startpagina{
+  	grid-template-columns: 1fr;
+  	grid-gap: 0px;
+  }
+  #startpagina div:first-child{
+  	grid-row: auto;
+  }
+  #startpagina div:nth-child(2){
+  	grid-row: auto;
+  }
+  #startpagina div:nth-child(3){
+  	display: block;
+  }
+  #startpagina section:nth-child(4){
+    grid-column: auto;
+  	grid-row: auto;
+  }
+  #startpagina section:nth-child(4) ul{
+  	display: block;
+  }
+  #startpagina section:nth-child(4) ul li img{
+  	width: 50%;
+  	float: left;
+  	margin-right: 20px;
+  }
+  #startpagina:last-child{
+  	margin-bottom: 50px;
+  }
+
+  #startpagina h2{
+  	text-align: left;
+  	padding: 0 0 22px 0;
+  	line-height: 2rem;
+  }
+  #startpagina div:first-child{
+  	text-align: center;
+  }
+  #startpagina div:first-child h2{
+  	text-align: center;
+  	padding-bottom: 30px;
+  	line-height: 2rem;
+  }
+  #startpagina p{
+  	padding-bottom: 30px;
+  }
+
+
+
+
+
+
+  /*recept pagina*/
+  main{
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 95%;
+  }
+  main h2{
+    grid-column: auto;
+  }
+  main figure{
+    grid-row: 2;
+  }
+  img{
+  	width: 100%;
+  }
+
+
+
+
+
+
+
+
+  /* inhoudstafel pagina */
+  #inhoudstafel{
+    grid-template-columns: 1fr;
+  }
+  #inhoudstafel li{
+  	height: 50px;
+  	text-align: center;
+  }
+
 
   /*filter-row*/
   #zoeken{
@@ -303,6 +389,11 @@ body {
     text-align: center;
     padding: 15px;
   }
+
+
+
+
+
 }
 
 /*landscape phone*/
