--- a/src/_includes/filter.njk
+++ b/src/_includes/filter.njk
@@ -6,6 +6,8 @@
     <a href="/vegan"><button class="btn">Vegan</button></a>
     <a href="/vis"><button class="btn">Vis</button></a>
     <a href="/vlees"><button class="btn">Vlees</button></a>
+    <a href="/soep"><button class="btn">Soep</button></a>
+    <a href="/desserten"><button class="btn">Desserten</button></a>
   </div>
 </div>
 
