--- a/src/index.njk
+++ b/src/index.njk
@@ -21,10 +21,10 @@ layout: 'base.njk'
     <a href="./vegan"><figure><img src="./assets/blog/article-2.JPG" alt="">Vegan</figure></a>
     <a href="./vis"><figure><img src="./assets/blog/article-4.JPG" alt="">Vis</figure></a>
     <a href="./vlees"><figure><img src="./assets/blog/article-3.JPG" alt="">Veggie</figure></a>
-    
-    <a href="./vegan"><figure><img src="./assets/blog/article-2.JPG" alt="">TEST</figure></a>
-    <a href="./vis"><figure><img src="./assets/blog/article-4.JPG" alt="">TEST 2</figure></a>
-    <a href="./vlees"><figure><img src="./assets/blog/article-3.JPG" alt="">TEST 3</figure></a>
+    <!--urls??-->
+    <a href="./test1"><figure><img src="./assets/blog/article-2.JPG" alt="">TEST 1</figure></a>
+    <a href="./test2"><figure><img src="./assets/blog/article-4.JPG" alt="">TEST 2</figure></a>
+    <a href="./test3"><figure><img src="./assets/blog/article-3.JPG" alt="">TEST 3</figure></a>
   </div>
 
   <section id="recente-recepten">
